--- a/ingress_policies.yaml
+++ b/ingress_policies.yaml
@@ -7,15 +7,17 @@
     - serviceName: bigquery.googleapis.com
       methodSelectors:
       - method: "*"
-    - resources: "*"
+    resources:
+    - "*"
 
 - ingressFrom:
     identityType: ANY_IDENTITY
     sources:
     - resource: projects/313022682418 # project_id: lithe-record-303112
-    - accessLevel: accessPolicies/212996153568/accessLevels/myaccesslevel
   ingressTo:
     operations:
     - serviceName: storage.googleapis.com
       methodSelectors:
       - method: "*"
+    resources:
+    - "*"
